k8s/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/instance: argocd
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: pfe-gitops-app.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /argocd
        pathType: Prefix
  tls:
  - hosts:
    - pfe-gitops-app.eastus.cloudapp.azure.com
    secretName: tls-secret
